<resources>
    <string name="app_name">News House</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="geo_news">GEO News</string>
    <string name="ary_news">ARY News</string>
    <string name="ptv_news">PTV News</string>
    <string name="samaa_tv">SAMAA TV</string>
    <string name="express_news">EXPRESS News</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="ptv_sports">PTV Sports</string>
    <string name="ten_sports">TEN Sports</string>
    <string name="bt_sports">BT Sports</string>
    <string name="sky_sports">SKY Sports</string>
    <string name="all_rights_reserved">All Rights Reserved</string>
</resources>